# Stoa

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  DESIGN.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml
services/agents/: pyproject.toml
services/agents/src/gtm_agents/: autonomy.py  graph.py  llm.py  mcp_client.py  memory.py  observability.py  state.py
services/agents/src/gtm_agents/tools/: __init__.py  crawler.py  research.py
services/agents/src/marketing_agents/: graph.py  state.py  subagents.py  vertex_media.py
services/agents/src/shared_memory/: __init__.py  kb.py
services/core/: pyproject.toml
services/core/src/stoa_core/: __init__.py  config.py  logging.py
services/core/src/stoa_core/agent/: __init__.py  bounded_agent.py  evidence.py  precomputed_context.py  progress.py  rate_limit.py  refresh_enqueue.py  route.py  route_resolver.py  unified_agent.py
services/core/src/stoa_core/alignment/: __init__.py  aggregate.py  friction.py  questions.py  stall.py  synthesize.py
services/core/src/stoa_core/analytics/: __init__.py  aggregate.py  compare.py  store.py  (+2 more)
services/core/tests/: test_agent_evidence.py  test_agent_progress.py  test_agent_route.py  test_agent_search.py  test_agent_tools_registry.py  test_alignment.py  test_analytics.py  test_attribution.py  test_bounded_agent.py  test_cache.py  test_chunk.py  test_client_errors.py  test_completeness.py  test_content.py  test_conversation_memory.py  test_enrichment_pipeline.py  test_extract_eval.py  test_insights.py  test_integrations.py  test_jira_jql.py  test_langchain_chat.py  test_llm_content.py  test_permissions.py  test_pii.py  test_query_prepare.py  test_rag_ingest.py  test_rag_retrieve.py  test_redis_security.py  test_rerank.py  test_research.py  test_research_serp.py  test_route_resolver.py  test_sanitize.py  test_ssrf.py  test_strip_inline_citations.py
(+603 files in other folders)
