[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtm-agents"
version = "0.1.0"
description = "LangGraph GTM multi-agent package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langsmith>=0.3.0,<0.4",
  "langgraph>=0.2.55",
  "langchain-core>=0.3.28",
  "langchain-openai>=0.2.14",
  "langchain-google-vertexai>=2.0.0",
  "pydantic>=2.10.0",
  "httpx>=0.27.0",
  "tavily-python>=0.5.0",
  "crawlee[playwright]>=0.6",
  "playwright>=1.50",
  "mcp>=1.9.0",
  "redis>=5.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
