[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stoa-core"
version = "0.1.0"
description = "Shared core library for Stoa Marketing Intelligence platform"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "supabase>=2.10.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "PyJWT[crypto]>=2.9.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-google-vertexai>=2.0.0",
    "langchain-anthropic>=0.3.0",
    "cohere>=5.0.0",
    "cryptography>=43.0.0",
    "google-genai>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/stoa_core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/stoa_core/integrations/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
